Added map to itinerary.js and styles in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
    ========================================================================== */
 
 
+#venuesMap {
+	height:300px;
+	box-shadow:0px 5px 5px rgba(0,0,0,.4);
+}
 
 
 .list-group-item {
