--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@
 	box-shadow:0px 5px 5px rgba(0,0,0,.4);
 }
 
+.input-group .form-control {
+width: 100%;
+margin-bottom: 0;
+margin-left: 20px;
+}
 
 .list-group-item {
 position: relative;
