Itinerary.js changes for styling things

--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,10 @@ body.modal-open {
 	margin:30px 0;
 }
 
+.itin .glyphicon {
+	margin-left:5px;
+}
+
 #addNewItin button {
 	font-size:12px;
 	padding:5px;
