--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,20 @@ body.modal-open {
 	}
 	.itin .col-md-2 {
     	display:none;
-	}	
+	}
+	#introHome,#introAbout {
+		top:50px;
+		width:100%;
+		min-height:95%;
+		padding:20px;
+		padding-top:0;
+		padding-bottom:30px;
+		margin-left:0;
+		background:rgba(0,0,0,.9);
+	}
+	#venuesMap {
+		display:none;
+	}
 }
 
 
