--- a/css/main.css
+++ b/css/main.css
@@ -184,13 +184,31 @@ body.modal-open {
 #addNewItinbutton {
 	font-size:12px;
 	padding:5px;
-	width:90%;
-	margin-left:5%;
-	margin-bottom:30px;
+	width:100%;
+	/*margin-left:5%;*/
+	/*margin-bottom:30px;*/
+}
+
+#sendVenue {
+	width:100%;
 }
 
 .modal-title {
 	color:#000;
+}
+
+.input-group-addon {
+	padding-top:4px;
+}
+
+.accordion-toggle:hover {
+	background-color:#006dcc;
+	background-image:-moz-linear-gradient(top, #08c, #04c);
+	background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
+	background-image:-webkit-linear-gradient(top, #08c, #04c);
+	background-image:-o-linear-gradient(top, #08c, #04c);
+	background-image:linear-gradient(to bottom, #08c, #04c);
+	background-repeat:repeat-x;
 }
 
 .input-group .form-control {
@@ -240,6 +258,13 @@ body.modal-open {
 .intro-dd-wrapper {
 	width:50%;
 	padding-top: 25px;
+}
+
+#userDescription {
+	width:100%;
+	border-radius: 4px;
+	resize:none;
+	border:1px solid #ccc;
 }
 
 .intro-dd {
