newitin button padding

--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ body.modal-open {
 	padding:5px;
 	width:100%;
 	/*margin-left:5%;*/
-	/*margin-bottom:30px;*/
+	margin-bottosm:30px;
 }
 
 #sendVenue {
